# Embedded-Sys

./: CMakeLists.txt  README.md  dashboard.html
include/: barcode.h  config.h  encoders.h  imu.h  ir_sensor.h  line_sensor.h  lwipopts.h  motors.h  multicore_obstacle.h  navigation.h  servo.h  telemetry.h  ultrasonic.h  utils.h
src/: barcode.c  encoders.c  imu.c  line_sensor.c  main.c  motors.c  multicore_obstacle.c  navigation.c  servo.c  telemetry.c  ultrasonic.c  utils.c
test/: B1.c  I1.c  I2.c  L1.c  L2.c  M1.c  M2-L.c  M2-R.c  M2-U.c  O1.c  O2.c  Q1.c  UC01.c  UC02.c  UC03.c  UC04.c  UC05.c  UC06.c  UC07.c  UC08.c  UC09.c  UC10.c  UC11.c
